tests/fixtures/errors/e0410_zero_width.mimz
// expect: E0410
module M {
  out y: bits[0]
  y = 0
}
